# cargo-rusty-deps

./: .gitignore  Cargo.toml
src/: dependencies.rs  main.rs  versions.rs
