[package]
name = "cargo-rusty-deps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = "4.3.10"
crates-index = "0.19.13"
reqwest = "0.11.18"
serde = { version = "1.0.164", features = ["derive"] }
toml = "0.7.5"
