[package]
name = "cargo-rusty-deps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = "4.3.10"
colored = "2.0.0"
crates-index = { version = "0.19.13", features = ["sparse-http"] }
http = "0.2.9"
reqwest = { version = "0.11.18", features = ["blocking", "gzip"] }
semver = "1.0.17"